2014-03-27 Pedro Vicente  <pvicente@uci.edu>

	* ncge: Detect NCAR CCM/CCSM/CF conventions for handling fixed variables 
	
	* nco_var_is_fix() Variable should be treated as a fixed variable 
	
	* nces #21 Test CF fixed variables


2014-03-26 Pedro Vicente  <pvicente@uci.edu>

	* ncwa #58-62: Cell methods regressions
	
	* ncwa #63: Cell methods test with repeated dimension names (test absolute dimension name)
	
	* nco_cnv_cf_cll_mth_add() Use absolute dimension name to match dimensions

2014-03-19 Pedro Vicente  <pvicente@uci.edu>

	* ncbo #29: Process cases where both an absolute path variable exists in 2 files and
	a relative variable match exists as a result of processing ncge with 1 ensemble member

2014-03-13 Pedro Vicente  <pvicente@uci.edu>

	* nces #20: Checking of conforming dimensions between ensemble variables

	* nco_chk_nsm() Check if ensembles dimensions are valid

2014-03-12 Pedro Vicente  <pvicente@uci.edu>

	* Add test files in_grp_4.cdl, in_grp_5.cdl; generate test case for nces average members
	whose hyperslabs resolve to the same size

2014-03-10  Charlie Zender  <zender@uci.edu>

	* Build NCO on rhea at ORNL

2014-03-10 Pedro Vicente  <pvicente@uci.edu>

	* ncbo #29. Process relative matches, second file greater (obs.nc cmip5.nc)

2014-03-09 Pedro Vicente  <pvicente@uci.edu>

	* ncbo #27. Process ensembles in file 2 (obs.nc) with common variable at root in file 1 (mdl.nc)
	Check fixed variables

	* ncbo #28. Process relative matches, first file greater (cmip5.nc obs.nc)

	* nco_prc_rel_cmn_nm(). Process relative matches.

2014-03-06 Pedro Vicente  <pvicente@uci.edu>

	* ncbo #26. Process ensembles in file 2 (obs.nc) with common variable at root in file 1 (mdl.nc)

	* nco_prc_nsm(). Process ensembles in file 2 with common variable at root in file 1

2014-03-05 Pedro Vicente  <pvicente@uci.edu>

	* ncbo #25. Process ensembles in file 1 (mdl.nc) with common variable at root in file 2 (obs.nc)
