@@ -1,3 +1,12 @@
+2014-04-01 Pedro Vicente  <pvicente@uci.edu>
+
+	* Data file in_grp_7.cdl with group previously in in_grp_3.cdl, to avoid netCDF 4.1 repeated dimension IDs bug
+	
+	* Regression script NCO_rgr.pm detects return code made by function nco_get_prg_info()
+	
+	* nco_get_prg_info() Make return code 41 for netCDF version 4.1x linkage and return code 43 for netCDF version 4.1.3.x linkage
+
+
 2014-03-27 Pedro Vicente  <pvicente@uci.edu>
 
 	* ncge: Detect NCAR CCM/CCSM/CF conventions for handling fixed variables 
